bk_ida/gccida/c3/k6_fpu_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4367:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 4136, "k6_fpu_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4367:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 4136, "k6_fpu_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4458:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4459:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], SFmode) && ix86_cpu == PROCESSOR_K6 ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4471:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( which_alternative || !mult_operator( recog_data_0.operand[3], SFmode) || ix86_cpu != PROCESSOR_K6) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4472:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( which_alternative || mult_operator( recog_data_0.operand[3], SFmode) || ix86_cpu != PROCESSOR_K6) ) 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4483:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4484:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], XFmode) && ix86_cpu == PROCESSOR_K6 ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4495:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4496:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], TFmode) && ix86_cpu == PROCESSOR_K6 ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4509:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4521:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 2 && mult_operator( recog_data_0.operand[3], SFmode) && ix86_cpu == PROCESSOR_K6 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4537:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], DFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4549:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 2 && mult_operator( recog_data_0.operand[3], DFmode) && ix86_cpu == PROCESSOR_K6 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4567:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/insn-attrtab.c:4585:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) && ix86_cpu == PROCESSOR_K6 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_fpu_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
